@@ -1,10 +1,14 @@
 ﻿v1.1.4
 
 Watchdog Diagnostics (temporary alpha addition)
-* New: /kbmwdbuffs - Displays current session diagnostic data
+* New: /kbmwdbuffs - Displays current session diagnostic data for Buff handlers.
 * New: /kbmwdbuffs all - Lists all history for saved sessions including current
 * New: /kbmwdbuffs clear - Clears session saved history and current session data.
+* New: /kbmwdavail - Displays current session diagnostic data for Unit Available handlers (all/clear as above).
 * Fixed: Start-up error with Watchdog variable.
+* Change: History will now only save up to 10 sessions for all diagnostics data.
+* Change: Increased accuracy of Average times by 1 place.
+* Change: Removed Average time calculations from the handlers, this is now calculated when calling the data via commands.
 
 ----
 v1.1.3
